syntax = "proto3";

option java_multiple_files = true;

package com.example;

option java_package = "com.example.grpcproto";

message GrpcRequest {
    string client = 1;
}

message GrpcResponse {
    string server_subset = 1;
}

service GrpcIstioRoutingServer {
    rpc GetServerSubset (GrpcRequest) returns (GrpcResponse);
}
